--- a/index.css
+++ b/index.css
@@ -1,29 +1,50 @@
 body {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
-    background-image: url("images/table.png");
-    background-size: cover;
-    font-weight: bold;
-    color: white;
-    text-align: center;
+  background-color: #075b9a;
+  color: white;
+  text-align: center;
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
-    color: goldenrod;
-}
-
-#message-el {
-    font-style: italic;
+  color: gold;
 }
 
 button {
-    color: #016f32;
-    width: 150px;
-    background: goldenrod;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    font-weight: bold;
-    border: none;
-    border-radius: 2px;
-    margin-bottom: 2px;
-    margin-top: 2px;
+  background-color: #016f32;
+  color: white;
+  width: 120px;
+  padding: 10px;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  margin: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #01421f;
+}
+
+#message {
+  font-style: italic;
+  margin-top: 10px;
+}
+
+p {
+  font-size: 18px;
+}
+
+#player-hand, #dealer-hand {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+#player-hand {
+  color: #ffbf00;
+}
+
+#dealer-hand {
+  color: #ff3333;
 }
